k8s/redis/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: intelliserve
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest 
        ports:
        - containerPort: 6379
        # resources:
        #   requests:
        #     cpu: "10m"
        #     memory: "16Mi"
        #   limits:
        #     cpu: "50m"
        #     memory: "64Mi"
